minor tweaks and fix city bg image optimisation and tiling

--- a/patterns/case-study.html
+++ b/patterns/case-study.html
@@ -132,6 +132,12 @@
 						</svg>
 					</div>
 
+					<div class="">
+						<span class="">Branding</span>
+						<span class="">Illustration</span>
+						<span class="">Web</span>
+					</div>
+
 					<a href="#intro" class="case-study__cover__button button button--primary scroll" data-speed="300">
 						<svg class="icon icon--arrow-down" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
 							<path class="path" d="M7.308 13.591c.411.386 1.05.386 1.462 0 .183-.169 4.453-4.588 7.171-9.683.183-.338.183-.749 0-1.087-.183-.338-.502-.555-.868-.58-.046-.024-3.471-.241-7.034-.241-3.563 0-6.988.217-7.034.241-.365.024-.708.241-.868.58-.183.338-.183.749 0 1.087 2.718 5.095 6.988 9.514 7.171 9.683z"/>
@@ -472,7 +478,7 @@
 		<section class="section section--center">
 			<div class="wrap wrap--x-large">
 				<h1>Interested? Let's get <span class="highlight-text">started</span></h1>
-				<a href="#" class="button button--primary">planner
+				<a href="#" class="button button--primary bounce-in">planner
 					<svg class="icon icon--feather" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
 						<path d="M1.5 15.017c.733-.483 1.6-1.117 2.4-1.717.5.05 1.083.033 1.733.033 2.05 0 4.917-.367 7.017-2.417.433-.417.817-1.017 1.15-1.517-.9-.25-1.8-.533-2.883-.933-.15-.05-.217-.2-.167-.35.05-.117.167-.183.283-.183 1.7.033 2.65.05 3.583.017.517-1.1.85-2.1 1.05-3.15-.733 0-1.767.033-3.067-.05-.15-.017-.267-.133-.25-.3 0-.2.167-.217.217-.25 1.333-.317 2.633-.767 3.35-1.1.133-1.433.067-2.45.05-2.567-.017-.25-.217-.467-.483-.483-.033 0-.567-.05-1.433-.05-2.517 0-7.167.4-9.95 3.1-2.233 2.183-2.5 4.933-2.467 6.917 2.467-2.667 6.85-5.483 7.383-5.033.083.067.083.15-.133.3-3.2 2.217-7.567 6.617-8.7 9.133-.45.833-.067 1.533 1.317.6z" fill="#ffffff"/>
 					</svg>
