added humans_txt to grunt

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   	<title>Creative web design team based in the UK : Geckotree</title>
   	<meta name="description" content="" />
   	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="author" href="" />
+	<meta name="author" href="humans.txt" />
 
 	<!--[if lt IE 9]>
 		<script src="assets/_components/html5shiv/dist/html5shiv.min.js"></script>
