--- a/patterns/case-study.html
+++ b/patterns/case-study.html
@@ -132,11 +132,11 @@
 						</svg>
 					</div>
 
-					<div class="">
+					<!-- <div class="">
 						<span class="">Branding</span>
 						<span class="">Illustration</span>
 						<span class="">Web</span>
-					</div>
+					</div> -->
 
 					<a href="#intro" class="case-study__cover__button button button--primary scroll" data-speed="300">
 						<svg class="icon icon--arrow-down" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
@@ -163,15 +163,15 @@
 					<div class="carousel js-carousel">
 						<div class="carousel__list js-carousel-list">
 							<article class="carousel__item js-carousel-item" data-label="Blue Style Tile">
-								<img src="../assets/img/content/blue-style-tile.svg" alt="Blue Style Tile">
+								<img src="../assets/_build/img/svg/blue-style-tile.svg" alt="Blue Style Tile">
 							</article>
 
 							<article class="carousel__item js-carousel-item" data-label="Red Style Tile">
-								<img src="../assets/img/content/red-style-tile.svg" alt="Red Style Tile">
+								<img src="../assets/_build/img/svg/red-style-tile.svg" alt="Red Style Tile">
 							</article>
 
 							<article class="carousel__item js-carousel-item" data-label="Teal Style Tile">
-								<img src="../assets/img/content/teal-style-tile.svg" alt="Teal Style Tile">
+								<img src="../assets/_build/img/svg/teal-style-tile.svg" alt="Teal Style Tile">
 							</article>
 						</div>
 					</div>
@@ -279,27 +279,27 @@
 					</div>
 
 					<div class="grid--7 case-study__section-content">
-						<img src="../assets/img/content/open-sans-light.svg" alt="Open Sans Light">
+						<img src="../assets/_build/img/svg/open-sans-light.svg" alt="Open Sans Light">
 					</div>
 				</div>
 			</section>
 
 			<section class="section wrap case-study__illustrations-sketches">
 				<article class="case-study__illustrations-sketches__image case-study__illustrations-sketches__image--large">
-					<img data-srcset="../assets/img/content/robot-machine-sketchx2.jpg 2440w,
-					    	../assets/img/content/robot-machine-sketch.jpg 1220w" 
+					<img data-srcset="../assets/_build/img/bitmap/robot-machine-sketchx2.jpg 2440w,
+					    	../assets/_build/img/bitmap/robot-machine-sketch.jpg 1220w" 
 					    sizes="100vw"
-					    src="../assets/img/content/robot-machine-sketch.jpg" 
-					    alt="placeholder image"
+					    src="../assets/_build/img/bitmap/robot-machine-sketch.jpg" 
+					    alt=""
 					    class="lazyload">
 				</article>
 
 				<article class="case-study__illustrations-sketches__image case-study__illustrations-sketches__image--small">
-					<img data-srcset="../assets/img/content/robot-sketchx2.jpg 800w,
-				    		../assets/img/content/robot-sketch.jpg 400w" 
+					<img data-srcset="../assets/_build/img/bitmap/robot-sketchx2.jpg 800w,
+				    		../assets/_build/img/bitmap/robot-sketch.jpg 400w" 
 				        sizes="100vw"
-				        src="../assets/img/content/robot-sketch.jpg" 
-				        alt="placeholder image"
+				        src="../assets/_build/img/bitmap/robot-sketch.jpg" 
+				        alt=""
 				        class="lazyload">
 				</article>
 			</section>
@@ -319,7 +319,7 @@
 					</div>
 
 					<div class="grid--7 case-study__section-content">
-						<img src="../assets/img/content/admachine.svg" alt="">
+						<img src="../assets/_build/img/svg/admachine.svg" alt="">
 					</div>
 				</div>
 			</section>
@@ -518,11 +518,11 @@
 
 			<section class="section wrap case-study__illustrations-sketches">
 				<article class="case-study__illustrations-sketches__image">
-					<img data-srcset="../assets/img/content/robot-machine-sketchx2.jpg 2440w,
-					    	../assets/img/content/robot-machine-sketch.jpg 1220w" 
+					<img data-srcset="../assets/_build/img/bitmap/robot-machine-sketchx2.jpg 2440w,
+					    	../assets/_build/img/bitmap/robot-machine-sketch.jpg 1220w" 
 					    sizes="100vw"
-					    src="../assets/img/content/robot-machine-sketch.jpg" 
-					    alt="placeholder image"
+					    src="../assets/_build/img/bitmap/robot-machine-sketch.jpg" 
+					    alt=""
 					    class="lazyload">
 				</article>
 			</section>
@@ -541,12 +541,12 @@
 				</div>
 
 				<div class="wrap wrap--x-large case-study__section-content">
-					<img data-srcset="../assets/img/content/adspy-desktop-3360.jpg 3360w,
-					    	../assets/img/content/adspy-desktop-1680.jpg 1680w,
-					    	../assets/img/content/adspy-desktop-840.jpg 840w,
-					    	../assets/img/content/adspy-desktop-420.jpg 420w" 
+					<img data-srcset="../assets/_build/img/bitmap/adspy-desktop-3360.jpg 3360w,
+					    	../assets/_build/img/bitmap/adspy-desktop-1680.jpg 1680w,
+					    	../assets/_build/img/bitmap/adspy-desktop-840.jpg 840w,
+					    	../assets/_build/img/bitmap/adspy-desktop-420.jpg 420w" 
 					    sizes="100vw"
-					    src="../assets/img/content/adspy-desktop-420.jpg" 
+					    src="../assets/_build/img/bitmap/adspy-desktop-420.jpg" 
 					    alt=""
 					    class="lazyload">
 				</div>
@@ -559,11 +559,11 @@
 				</div>
 
 				<div class="wrap wrap--x-large case-study__section-content">
-					<img data-srcset="../assets/img/content/adspy-tablet-1560.jpg 1560w,
-					    	../assets/img/content/adspy-tablet-780.jpg 780w,
-					    	../assets/img/content/adspy-tablet-390.jpg 390w" 
+					<img data-srcset="../assets/_build/img/bitmap/adspy-tablet-1560.jpg 1560w,
+					    	../assets/_build/img/bitmap/adspy-tablet-780.jpg 780w,
+					    	../assets/_build/img/bitmap/adspy-tablet-390.jpg 390w" 
 					    sizes="100vw"
-					    src="../assets/img/content/adspy-tablet-390.jpg" 
+					    src="../assets/_build/img/bitmap/adspy-tablet-390.jpg" 
 					    alt=""
 					    class="lazyload">
 				</div>
@@ -576,10 +576,10 @@
 				</div>
 
 				<div class="wrap wrap--x-large case-study__section-content">
-					<img data-srcset="../assets/img/content/adspy-mobile-800.jpg 800w,
-					    	../assets/img/content/adspy-mobile-400.jpg 400w" 
+					<img data-srcset="../assets/_build/img/bitmap/adspy-mobile-800.jpg 800w,
+					    	../assets/_build/img/bitmap/adspy-mobile-400.jpg 400w" 
 					    sizes="100vw"
-					    src="../assets/img/content/adspy-mobile-400.jpg" 
+					    src="../assets/_build/img/bitmap/adspy-mobile-400.jpg" 
 					    alt=""
 					    class="lazyload">
 				</div>
@@ -592,12 +592,12 @@
 				</div>
 
 				<div class="wrap wrap--x-large case-study__section-content">
-					<img data-srcset="../assets/img/content/adspy-pricing-desktop-3360.jpg 3360w,
-					    	../assets/img/content/adspy-pricing-desktop-1680.jpg 1680w,
-					    	../assets/img/content/adspy-pricing-desktop-840.jpg 840w,
-					    	../assets/img/content/adspy-pricing-desktop-420.jpg 420w" 
+					<img data-srcset="../assets/_build/img/bitmap/adspy-pricing-desktop-3360.jpg 3360w,
+					    	../assets/_build/img/bitmap/adspy-pricing-desktop-1680.jpg 1680w,
+					    	../assets/_build/img/bitmap/adspy-pricing-desktop-840.jpg 840w,
+					    	../assets/_build/img/bitmap/adspy-pricing-desktop-420.jpg 420w" 
 					    sizes="100vw"
-					    src="../assets/img/content/adspy-pricing-desktop-420.jpg" 
+					    src="../assets/_build/img/bitmap/adspy-pricing-desktop-420.jpg" 
 					    alt=""
 					    class="lazyload">
 				</div>
@@ -610,11 +610,11 @@
 				</div>
 
 				<div class="wrap wrap--x-large case-study__section-content">
-					<img data-srcset="../assets/img/content/adspy-pricing-tablet-1560.jpg 1560w,
-					    	../assets/img/content/adspy-pricing-tablet-780.jpg 780w,
-					    	../assets/img/content/adspy-pricing-tablet-390.jpg 390w" 
+					<img data-srcset="../assets/_build/img/bitmap/adspy-pricing-tablet-1560.jpg 1560w,
+					    	../assets/_build/img/bitmap/adspy-pricing-tablet-780.jpg 780w,
+					    	../assets/_build/img/bitmap/adspy-pricing-tablet-390.jpg 390w" 
 					    sizes="100vw"
-					    src="../assets/img/content/adspy-pricing-tablet-390.jpg" 
+					    src="../assets/_build/img/bitmap/adspy-pricing-tablet-390.jpg" 
 					    alt=""
 					    class="lazyload">
 				</div>
@@ -627,10 +627,10 @@
 				</div>
 
 				<div class="wrap wrap--x-large case-study__section-content">
-					<img data-srcset="../assets/img/content/adspy-pricing-mobile-800.jpg 800w,
-					    	../assets/img/content/adspy-pricing-mobile-400.jpg 400w" 
+					<img data-srcset="../assets/_build/img/bitmap/adspy-pricing-mobile-800.jpg 800w,
+					    	../assets/_build/img/bitmap/adspy-pricing-mobile-400.jpg 400w" 
 					    sizes="100vw"
-					    src="../assets/img/content/adspy-pricing-mobile-400.jpg" 
+					    src="../assets/_build/img/bitmap/adspy-pricing-mobile-400.jpg" 
 					    alt=""
 					    class="lazyload">
 				</div>
