swapped footer icons for grunt icon

--- a/patterns/footer.html
+++ b/patterns/footer.html
@@ -13,6 +13,14 @@
 	<!--<![endif]-->
 	
 	<script src="../assets/_build/js/head.js"></script>
+
+	<script>
+		grunticon([
+			'../assets/_build/img/icons/icons-svg.css', 
+			'../assets/_build/img/icons/icons-png.css', 
+			'../assets/_build/img/icons/icons-fallback.css'
+		], grunticon.svgLoadedCallback);
+	</script>
 </head>
 <body class="page">
 
@@ -20,32 +28,24 @@
 		<ul class="page__footer__list">
 			<li class="page__footer__item">
 				<a href="#" class="page__footer__link page__footer__link--twitter" target="_blank">
-					<svg class="icon icon--twitter" width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-						<path class="path" d="M32 6.079c-1.177.522-2.442.875-3.77 1.033 1.355-.812 2.396-2.099 2.886-3.631-1.268.752-2.674 1.298-4.169 1.592-1.197-1.275-2.903-2.073-4.792-2.073-3.626 0-6.565 2.94-6.565 6.565 0 .515.057 1.016.17 1.497-5.457-.275-10.294-2.888-13.532-6.86-.565.97-.889 2.098-.889 3.301 0 2.277 1.159 4.287 2.92 5.464-1.076-.034-2.088-.329-2.973-.821l-.001.082c0 3.181 2.263 5.835 5.267 6.438-.551.15-1.131.23-1.73.23-.423 0-.834-.041-1.235-.117.835 2.607 3.26 4.506 6.133 4.559-2.247 1.76-5.078 2.81-8.154 2.81-.53 0-1.052-.031-1.566-.092 2.905 1.863 6.356 2.95 10.064 2.95 12.076 0 18.679-10.004 18.679-18.68 0-.284-.006-.567-.019-.849 1.283-.926 2.396-2.082 3.276-3.398"/>
-					</svg>
+					<i class="icon icon--twitter" data-grunticon-embed></i>
 				</a>
 			</li>
 			<li class="page__footer__item">
 				<a href="#" class="page__footer__link page__footer__link--dribbble" target="_blank">
-					<svg class="icon icon--dribbble" width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-						<path class="path" d="M16 32c-8.822 0-16-7.178-16-16s7.178-16 16-16c8.823 0 16 7.178 16 16s-7.177 16-16 16zm13.494-13.81c-.468-.147-4.23-1.27-8.513-.584 1.788 4.912 2.515 8.913 2.655 9.744 3.066-2.073 5.249-5.357 5.858-9.16zm-8.156 10.411c-.203-1.199-.996-5.377-2.915-10.364l-.09.031c-7.708 2.686-10.476 8.032-10.722 8.534 2.318 1.807 5.23 2.885 8.389 2.885 1.893 0 3.698-.387 5.338-1.086zm-15.491-3.442c.309-.53 4.06-6.741 11.109-9.019l.538-.163c-.343-.776-.717-1.553-1.108-2.319-6.825 2.043-13.447 1.958-14.046 1.945l-.007.418c0 3.51 1.331 6.715 3.514 9.138zm-3.225-11.937c.611.008 6.242.032 12.635-1.665-2.265-4.026-4.707-7.41-5.067-7.904-3.824 1.803-6.682 5.328-7.568 9.569zm10.175-10.488c.378.506 2.86 3.886 5.1 8.001 4.859-1.821 6.917-4.587 7.163-4.937-2.414-2.141-5.587-3.444-9.06-3.444-1.103 0-2.175.133-3.203.38zm13.782 4.644c-.288.391-2.579 3.326-7.632 5.389.319.651.623 1.313.907 1.98l.294.705c4.548-.572 9.066.344 9.517.44-.03-3.226-1.183-6.188-3.086-8.514z"/>
-					</svg>
+					<i class="icon icon--dribbble" data-grunticon-embed></i>
 				</a>
 			</li>
 			<li class="page__footer__item">
 				<a href="#" class="page__footer__link page__footer__link--instagram" target="_blank">
-					<svg class="icon icon--instagram" width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-						<path class="path" d="M28 0h-24c-2.208 0-4 1.792-4 4v24c0 2.208 1.792 4 4 4h24c2.208 0 4-1.792 4-4v-24c0-2.208-1.792-4-4-4zm-12 12c3.684 0 4 4 4 4s.118 4-4 4c-4.116 0-4-4-4-4s.316-4 4-4zm12 14c0 1.105-.894 2-2 2h-20c-1.106 0-2-.895-2-2v-10c0-1.106.894-2 2-2h2.284c-.168.643-.284 1.305-.284 2 0 4.418 3.582 8 8 8s8-3.582 8-8c0-.695-.118-1.357-.284-2h2.284c1.106 0 2 .894 2 2v10zm0-18c0 1.103-.894 2-2 2h-2c-1.104 0-2-.897-2-2v-2c0-1.104.896-2 2-2h2c1.106 0 2 .896 2 2v2z"/>
-					</svg>
+					<i class="icon icon--instagram" data-grunticon-embed></i>
 				</a>
 			</li>
 		</ul>
 
 		<span class="page__footer__label">
 			Made with
-			<svg class="icon icon--heart" width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-				<path class="path" d="M14.638 7.927c2.121-4.514-.31-6.91-2.776-6.927-.741 0-1.483.208-2.104.642-1.638 1.128-2.035 2.691-2.035 2.691s-.397-1.545-2.035-2.674c-.603-.434-1.31-.642-2.035-.642-2.483-.035-4.983 2.361-2.845 6.927 2.035 4.358 5.863 6.944 6.914 6.944 1.052 0 4.88-2.604 6.914-6.962z"/>
-			</svg>
+			<i class="icon icon--heart" data-grunticon-embed></i>
 			in the UK
 		</span>
 	</footer>
