added custom build modernizr and zepto

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if gt IE 9]><!--> <html lang="en" class="no-mustard no-js"> <!—<![endif]-->
 <head>
 	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   	<title>Creative web design team based in the UK : Geckotree</title>
   	<meta name="description" content="" />
@@ -20,14 +20,6 @@
 	<!--<![endif]-->
 	
 	<script src="assets/_build/js/head.js"></script>
-
-	<script>
-		grunticon([
-			'assets/_build/img/icons/icons-svg.css', 
-			'assets/_build/img/icons/icons-png.css', 
-			'assets/_build/img/icons/icons-fallback.css'
-		], grunticon.svgLoadedCallback);
-	</script>
 
 	<!-- FAVICONS -->
 	<link rel="icon" type="image/png" sizes="196x196" href="assets/_build/img/brand-icons/favicon-196.png">
@@ -264,6 +256,6 @@
 		</span>
 	</footer>
 	
-	<script data-main="assets/js/main" src="assets/_components/requirejs/require.js"></script>
+	<script data-main="assets/_build/js/main" src="assets/_components/requirejs/require.js"></script>
 </body>
 </html>
